[package]
name = "ls"
version = "0.1.0"
authors = ["ryakosh <ryakosh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.18", features = ["full"] }
futures = "0.3.4"
structopt = "0.3.13"
failure = "0.1.7"
failure_derive = "0.1.7"