[package]
name = "ls"
version = "0.1.0"
authors = ["ryakosh <ryakosh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
failure = "0.1.7"
failure_derive = "0.1.7"
exitfailure = "0.5.1"
users = "0.10.0"
chrono = "0.4.11"
umask = "0.1.8"